attempt1 fixing contrast

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ h1 {
     font-family:  'Merienda', cursive;
     font-size: 6vh;
     margin: 4vh;
+    color: #f8f8ff;
 }
 
 /**********************************/
@@ -41,6 +42,7 @@ h1 {
     text-align: center;
     margin: 30px;
     width: 80%;
+    color: #f8f8ff;
 }
 
 /*form for user to enter product they want to search*/
@@ -54,7 +56,7 @@ label {
     width: 100%;
     font-size: 3vh;
     font-weight: bold;
-    color: orange;
+    color: #FEF6D7;
 }
 
 /*question css*/
